--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
 .bg-mint{
     background-color: #1ABC9Cff;
 }
+.bg-yinmn-blue{
+    background-color: #3A546Dff;
+}
 .text-uppercase{
     text-transform: uppercase;
 }
@@ -23,4 +26,13 @@ li a{
 .col-12 button{
     border-right: 2px solid white;
     border-bottom: 2px solid white;
+}
+.border-radius{
+    border-radius: 10px;
+}
+.border-radius-footer{
+    border-radius: 45%;
+}
+footer a{
+    text-decoration: none;
 }
